--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,129 @@ header {
 #note-title::placeholder {
     font-weight: 600;
 }
+  
+.note {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 16px;
+    width: 250px;
+    background-color: #fff;
+    border-color: #e0e0e0;
+    border: 1px solid #d3d3d3;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
+    border-radius: 8px;
+    transition-duration: 0.218s;
+    transition-property: background, border, opacity, box-shadow, transform;
+    transition-timing-function: ease-in;
+}
+  
+.note:hover {
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
+      0 1px 3px 1px rgba(60, 64, 67, 0.149);
+}
+  
+.note-title {
+    padding-top: 12px;
+    letter-spacing: 0.00625em;
+    color: #e8eaed;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    min-height: 38px;
+    padding: 16px 16px 0 16px;
+    transition: background-color 0.218s ease-in;
+    box-sizing: border-box;
+    font-variant-ligatures: none;
+    outline: none;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+  
+.note-text {
+    font-size: 1.125rem;
+    color: #e8eaed;
+    font-weight: 400;
+    line-height: 1.5rem;
+    min-height: 30px;
+    letter-spacing: 0.01428571em;
+    padding: 4px 16px 12px 16px;
+    box-sizing: border-box;
+    font-variant-ligatures: none;
+    outline: none;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+  
+.toolbar {
+    flex-direction: row-reverse;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.54);
+    display: flex;
+    font-size: 12px;
+    line-height: 26px;
+    margin: 4px 0;
+    position: relative;
+    transition: opacity 0.218s ease-in-out, background-color 0.218s ease-in-out,
+      box-shadow 0.218s ease-in-out;
+}
+  
+.toolbar-color,
+.toolbar-delete {
+    color: white;
+    height: 20px;
+    margin: 0 8px;
+    width: 20px;
+    margin: 0 3px;
+    cursor: pointer;
+}
+  
+.toolbar-color-modal {
+    display: none;
+}
+  
+#color-tooltip {
+    border-bottom: 2px solid #fff;
+    position: absolute;
+    top: -40;
+    background: #fff;
+    border: 1px solid black;
+    left: 0;
+    z-index: 20;
+    border-radius: 5px;
+    display: none;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    padding: 5px 7px 3px;
+    width: 136px;
+    height: 40px;
+    justify-content: space-between;
+}
+  
+.color-option {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid #dedede;
+}
+  
+.color-option:hover {
+    border: 1px solid black;
+}
+  
+#white {
+    background: white;
+}
+  
+#purple {
+    background: #d7aefb;
+}
+  
+#orange {
+    background: #fbbc04;
+}
+  
+#teal {
+    background: #a7ffeb;
+}
