--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,104 @@ header {
     border: 1px solid black;
 }
   
+.modal {
+    position: fixed;
+    left: 0;
+    z-index: 200;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+  
+.modal-content {
+    box-shadow: 0 1px 3px 0 rgba(60, 64, 67, 0.302),
+      0 4px 8px 3px rgba(60, 64, 67, 0.149);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #202124;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.modal-title {
+    width: calc(100% - 26px);
+    background-color: #202124;
+    color:#e8eaed;
+    min-height: 43px;
+    margin: 0 5px;
+    font-weight: 600;
+    line-height: 1.5rem;
+    letter-spacing: 0.00625em;
+    border: 0;
+    overflow: hidden;
+    position: relative;
+    font-size: 1.375rem;
+    font-weight: 400;
+    line-height: 1.75rem;
+    padding-bottom: 12px;
+    padding-top: 16px;
+}
+  
+.modal-text {
+    width: calc(100% - 26px);
+    background-color: #202124;
+    color:#e8eaed;
+    min-height: 43px;
+    margin: 0 5px;
+    padding: 10px 10px;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    letter-spacing: 0.00625em;
+    border: 0;
+    overflow: hidden;
+    position: relative;
+    font-size: 14px;
+    line-height: 19px;
+    min-height: 46px;
+    padding: 4px 16px 12px 0px;
+}
+  
+.modal-close-button {
+    float: right;
+    margin: 0.2em 0;
+    box-sizing: border-box;
+    color:#e8eaed;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    letter-spacing: 0.01785714em;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.25rem;
+    height: 36px;
+    padding: 8px 24px;
+    border-radius: 4px;
+    border-color: transparent !important;
+    background-color: transparent;
+    cursor: pointer;
+}
+  
+.modal-close-button:hover {
+    filter: brightness(95%);
+    background-color: rgb(154, 160, 166, 0.04);
+}
+  
+.open-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+  
 #white {
     background: white;
 }
