--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,8 @@ header {
     border-bottom: 2px solid #fff;
     position: absolute;
     top: -40;
-    background: #fff;
-    border: 1px solid black;
+    background-color: #202124;
+    border: 1px solid white;
     left: 0;
     z-index: 20;
     border-radius: 5px;
@@ -340,8 +340,8 @@ header {
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
   
-#white {
-    background: white;
+#default {
+    background: #202124;
 }
   
 #purple {
